<resources>
    <string name="app_name">SmartHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="action_import" translatable="false">Import</string>
    <string name="action_export" translatable="false">Export</string>
    <string name="action_add" translatable="false">Add Device</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_AddNewDevice" translatable="false">New Device</string>

    <string name="feedback">Feedback</string>
    <string name="about_us" translatable="false">About Us</string>
    <string name="exit">Exit</string>

    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="devices">Devices</string>

    <string name="action_qrcode" translatable="false">Scan qr-code</string>
    <string name="action_save" translatable="false">Save</string>
    <string name="action_edit" translatable="false">Edit</string>
    <string name="action_remove" translatable="false">Remove</string>
    <string name="action_search" translatable="false">Search</string>

    <string name="off"> Off</string>
    <string name="on">On</string>
    <string name="pick_a_color">Pick a Color</string>
    <string name="chooseMode">Choose Mode</string>
    <string name="white_light">"White: "</string>
    <string name="user_favorite_color">user favorite color</string>
    <string name="color_picker">color picker</string>
    <string-array name="musical">
        <item>Manual</item>
        <item>Musical</item>
    </string-array>

    <string name="rfButtonDescription">Long click available</string>


    <string name="devPassLenWrong">Password must be 4 characters.</string>
    <string name="devNameWrong">Max 64 characters.</string>
    <string name="devNameWrongEmpty">Not allowed to be empty</string>

    <string name="_4_digits_e_g_1234" translatable="false">4 characters. E.g:1234</string>
    <string name="deviceNameConstraint">Max 64 characters</string>
    <string name="device_password">Device password</string>
    <string name="device_name">Device Name</string>

    <string name="cancel">Cansel</string>
    <string name="delete_this_device">Delete this device?</string>
    <string name="DELETE" translatable="false">DELETE</string>
    <string name="delete_device">Delete this device?</string>
    <string name="admin_delete_device">If delete this device, you should config again to can set permission to others. are you sure to delete any way?</string>


    <string name="users">Users:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internetModule">This device type is \'Internet Module\' that help you to control other device via Internet. to control via internet go to setting tab and active \'Away Mode\' and be sure you are connect to the internet.</string>
    <string name="protection">Protection</string>
    <string name="security">Security</string>
    <string name="vibration">Vibration</string>
    <string name="awayMode">Away Mode</string>
    <string name="securityOn">Application locked successfully.</string>
    <string name="securityOff">Application unlocked successfully.</string>
    <string name="passwordMissmatch">Passwords are not match or admin password is wrong.</string>
    <string name="passwordLenError">Password must be 4 digits.</string>
    <string name="passchanged">Password changed successfully.</string>
    <string name="passwordTitle">Password:</string>
    <string name="newPasswordTitle">New password:</string>
    <string name="confirmPassword">Confirm:</string>
    <string name="connectSeccessfully">Connect to server Successfully.</string>
    <string name="unknowingMessage">Unknowing condition.</string>
    <string name="serverNotRespond">Server Not Respond.</string>
    <string name="connectionTimeout">Connection time out.</string>
    <string name="failedToConnect">Failed to connect server.</string>
    <string name="communicatingWithServer">Communicating with server</string>
    <string name="pleaseWait">Please wait</string>
    <string name="serverSendWrongData">Mismatched data</string>
    <string name="ssidError">Must be enter.</string>
    <string name="netPassError">Must be 8~32 characters.</string>
    <string name="perPassError">Must be 4 characters.</string>
    <string name="portError">Must be between 1024 and 65500</string>
    <string name="devNameError">Max 8 characters.</string>
    <string name="addNewDev">New Device</string>
    <string name="ssid">SSID:</string>
    <string name="network_password">Network Password:</string>
    <string name="personal_password">Personal Password:</string>
    <string name="portNumber">Port:</string>
    <string name="device_name_addDev">Device Name:</string>

    <string-array name="effects">
        <item>Effect 1</item>
        <item>Effect 2</item>
        <item>Effect 3</item>
        <item>Effect 4</item>
        <item>Effect 5</item>
        <item>Effect 6</item>
    </string-array>
    <string name="chooseEffect">Choose effect</string>
    <string name="user_name">user name</string>
    <string name="cant_recognize">We can\'t recognize the type of this Device. please update app to support newer types.</string>
    <string name="questionMark">\?</string>

</resources>
