<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"

    >

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:background="@drawable/background_gradient">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:id="@+id/dialog_title"
            android:textColor="@android:color/white"
            android:text="@string/DELETE"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/about_fragment"
            android:layout_below="@+id/dialog_title"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1.75"
            android:text="@string/delete_this_device"
            android:padding="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_red_light"
            android:layout_below="@+id/about_fragment"
            android:layout_alignParentEnd="true"
            android:id="@+id/dialog_del"
            android:text="@string/DELETE"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_below="@+id/about_fragment"
            android:layout_toStartOf="@+id/dialog_del"
            android:id="@+id/dialog_cancel"
            android:text="@string/cancel"/>
    </RelativeLayout>

</RelativeLayout>