<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/transparent">

    <RelativeLayout
        android:id="@+id/settingSecurity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorRow"
        android:padding="12dp"
        android:layout_marginBottom="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/security"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/settingChev"
            android:src="@drawable/chevron_right"
            android:layout_centerVertical="true"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorRow"
        android:padding="12dp"
        android:layout_marginBottom="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/protection"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <Switch
            android:id="@+id/settingProtection"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorRow"
        android:padding="12dp"
        android:layout_marginBottom="2dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vibration"

            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
        <Switch
            android:id="@+id/settingVib"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorRow"
        android:padding="12dp"
        android:visibility="visible"
        android:layout_marginBottom="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/awayMode"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <Switch
            android:id="@+id/settingAwayMode"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</LinearLayout>