<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/oldPassText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordTitle"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                />
            <EditText
                android:id="@+id/changePass_oldpass"
                android:layout_below="@+id/oldPassText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="4"
                android:hint="type password here"
                android:paddingEnd="25dp"
                android:textColorHint="@android:color/transparent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:drawableStart="@drawable/locked_textbox"
                android:inputType="numberPassword"
                android:background="@drawable/login_text_box"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                />

            <TextView
                android:id="@+id/changePass_passText"
                android:layout_below="@+id/changePass_oldpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newPasswordTitle"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                />
            <EditText
                android:id="@+id/changePass_newPass"
                android:layout_below="@+id/changePass_passText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="4"
                android:hint="type password here"
                android:paddingEnd="25dp"
                android:textColorHint="@android:color/transparent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:drawableStart="@drawable/locked_textbox"
                android:inputType="numberPassword"
                android:background="@drawable/login_text_box"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/changePass_confTitle"
                android:layout_below="@+id/changePass_newPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmPassword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                />
            <EditText
                android:layout_below="@+id/changePass_confTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changePass_confText"
                android:textAlignment="center"
                android:maxLength="4"
                android:hint="type password here"
                android:paddingEnd="25dp"
                android:textColorHint="@android:color/transparent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:background="@drawable/login_text_box"
                android:drawableStart="@drawable/locked_textbox"
                android:inputType="numberPassword"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>